# opentelemetry-fastapi-test

./: main.py  pyproject.toml
